# CHEM_279

./: .gitignore  ReusableCommand.md
ProblemSets/: README.md
ProblemSets/EHT_Final/: thinksToDo.md
ProblemSets/EHT_Final/data/: OH.txt
ProblemSets/EHT_Final/inc/: Atom.h  BasisFunction.h
ProblemSets/EHT_Final/src/: CNDO.cpp  makefile
ProblemSets/EHT_Final/test/: test.cpp
ProblemSets/PS_1/: makefile
ProblemSets/PS_1/data/: README.md  coords.txt  coords_err.txt
ProblemSets/PS_1/inc/: PS_1.h  README.md
ProblemSets/PS_1/lib/: README.md
ProblemSets/PS_1/src/: PS_1.cpp  README.md  makefile
ProblemSets/PS_1/test/: README.md  makefile  test_integrated.cpp  test_unit.cpp
ProblemSets/PS_1/utils/: README.md  atom.h
ProblemSets/PS_2/: README.md  makefile
ProblemSets/PS_2/data/: README.md
ProblemSets/PS_2/inc/: PS_2.h  README.md
ProblemSets/PS_2/lib/: README.md
ProblemSets/PS_2/src/: PS_2.cpp  README.md  makefile
ProblemSets/PS_2/test/: README.md  makefile  test.cpp
ProblemSets/PS_3/: README.md  makefile
ProblemSets/PS_3/data/: README.md
ProblemSets/PS_3/inc/: README.md  (+2 more)
ProblemSets/PS_4/: README.md  makefile  temp.cpp  thingToDo.md
ProblemSets/PS_5/: CMakeLists.txt  README.md
ProblemSets/PS_5/data/: C2H2.txt
ProblemSets/PS_5/inc/: BasisSetInfo.h  CNDO.h  Molecule.h  Utils.h
ProblemSets/PS_5/src/: Atom.cpp  BasisFunction.cpp  Molecule.cpp  Utils.cpp
ProblemSets/PS_5/test/: makefile  test.cpp
ProblemSets/PS_5/utils/: README.md  constants.h  factorial.h
armadillo-12.6.2/: README.md  docs.html
test_codes/: test  test.cpp
(+23 files in other folders)
